--- a/dom_project practices/fullApp.html
+++ b/dom_project practices/fullApp.html
@@ -20,7 +20,12 @@
         </div>
     </header>
     <main>
-        
+        <div class="text-center pt-5 space-y-4">
+            <h1 class="font-bold text-2xl">Welcome to counter</h1>
+            <p id="count" class="text-xl font-semibold">0</p>
+            <button onclick="addValue()" class="text-xl font-semibold bg-green-400 px-5 py-2 rounded-lg">+</button>
+            <button class="text-xl font-semibold bg-red-400 px-5 py-2 rounded-lg">-</button>
+        </div>
     </main>
     <script src="./js/fullApp.js"></script>
 </body>
